--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -3,6 +3,9 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 
 @import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 @import 'font-awesome/scss/font-awesome';
+@import url(http://fonts.googleapis.com/css?family=Oswald:700&subset=latin,latin-ext);
+
+//  font-family: 'Oswald', sans-serif;
 
 /**
  * App-wide Styles
@@ -18,5 +21,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // Component styles are injected through grunt
 // injector
 @import 'main/main.scss';
+@import 'post/post.scss';
+@import 'sideMenu/sideMenu.scss';
 @import 'modal/modal.scss';
 // endinjector
