--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -7,15 +7,17 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 
 //  font-family: 'Oswald', sans-serif;
 
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900,400italic&subset=latin,latin-ext);
+//  font-family: 'Source Sans Pro', sans-serif;
+
 /**
  * App-wide Styles
  */
-
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 
 // Component styles are injected through grunt
