--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -1,29 +1,14 @@
+.main {
+  color: #000;
+  margin-left: 250px;
+  padding-left: 20px;
+  padding-right: 20px;
 
-
-
-#banner {
-  border-bottom: none;
-  margin-top: -20px;
-}
-
-#banner h1 {
-  font-size: 60px;
-  line-height: 1;
-  letter-spacing: -1px;
-}
-
-.hero-unit {
-  position: relative;
-  padding: 30px 15px;
-  color: #F5F5F5;
-  text-align: center;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
-}
-
-.footer {
-  text-align: center;
-  padding: 30px 0;
-  margin-top: 70px;
-  border-top: 1px solid #E5E5E5;
+  h2 {
+//    font-family: 'Oswald', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 800;
+    font-size: 4em;
+    color: #3E3F41;
+  }
 }
