--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -6,7 +6,8 @@
 
   h2 {
 //    font-family: 'Oswald', sans-serif;
-    font-family: 'Source Sans Pro', sans-serif;
+//    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Lora', serif;
     font-weight: 800;
     font-size: 4em;
     color: #3E3F41;
