--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -10,6 +10,9 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900,400italic&subset=latin,latin-ext);
 //  font-family: 'Source Sans Pro', sans-serif;
 
+@import url(http://fonts.googleapis.com/css?family=Lora);
+//font-family: 'Lora', serif;
+
 /**
  * App-wide Styles
  */
