--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -5,8 +5,13 @@ html(lang='en')
         meta(name='viewport', content='width=device-width')
         title= title
         block css
+            //-<!-- build:css public/css/styles.min.css -->
             link(rel='stylesheet', href='css/app.css')
+            link(rel='stylesheet', href='css/fonts.css')
+            //-<!-- endbuild -->
         block js
+            //-<!-- build:js public/js/scripts.min.js -->
+            //-<!-- endbuild -->
             script(src='http://localhost:35729/livereload.js')
     body
         block content
