--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -15,3 +15,8 @@ html(lang='en')
             script(src='http://localhost:35729/livereload.js')
     body
         block content
+
+        //-<!-- build:js public/js/scripts.min.js -->
+            //-<!-- bower:js -->
+            //-<!-- endbower -->
+        //-<!-- endbuild -->
