Navigation excluded from main layout

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -18,6 +18,7 @@ html(lang='en')
             //-<!-- endbuild -->
             script(src='http://localhost:35729/livereload.js')
     body
+        include navigation
         block content
 
         script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
