--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -18,8 +18,13 @@ html(lang='en')
             //-<!-- endbuild -->
             script(src='http://localhost:35729/livereload.js')
     body
-        include navigation
-        block content
+        //include navigation
+        .top-bg-bar
+
+        .container
+            .row
+                .content.col-md-8.col-md-offset-2.col-xs-10.col-xs-offset-1
+                    block content
 
         script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
         script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js')
