--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -1,4 +1,94 @@
+$color-main: #009688;
+
 body {
   min-height: 2000px;
-  padding-top: 70px;
+  background-color: #f3f3f3;
+}
+
+.top-bg-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 300px;
+  background-color: $color-main;
+  z-index: -1000;
+}
+
+.content {
+  margin-top: 120px;
+}
+
+.content {
+  min-height: 200px;
+}
+
+.card {
+  display: block;
+  box-sizing: border-box;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+  padding: 8px;
+  border-radius: 2px;
+  border-style: 1px solid rgba(0,0,0,.26);
+  overflow: hidden;
+  background-color: #fff;
+  margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  h2 {
+//    color: #3f51b5;
+//    color: darken($color-main, 0.2);
+    color: #000;
+    font-weight: 500;
+  }
+
+  .top {
+    width: 100%;
+    margin-bottom: 16px;
+    position: relative;
+
+    .date {
+      float: right;
+      position: absolute;
+      top: 8px;
+      right: 0;
+    }
+  }
+
+//  .img {
+//    img {
+//      margin-left: -20px;
+//      margin-right: -20px;
+////      margin-top: -10px;
+//      width: 107%;
+//    }
+//  }
+
+  img {
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-top: -10px;
+//    width: 751px;
+    width: 107%;
+  }
+
+  .bottom {
+    margin-top: 20px;
+    text-align: center;
+    border-top: 1px solid rgba(85, 85, 85, 0.3);
+  }
+
+}
+
+.card.header {
+  height: 240px;
+}
+
+.divider {
+  display: block;
+  background-color: #555;
+  height: 1px;
+  width: 100%;
+  opacity: 0.3;
 }
