--- a/public/css/fonts.scss
+++ b/public/css/fonts.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:900,400italic,400,300,700,500);
+
 body {
-//  color: #f00;
+  font-family: 'Roboto', sans-serif;
 }
