Cards top reworked

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -8,9 +8,11 @@ block content
 
     .card
         .top
-            h2 Some example article
-            .date
-                p 2014-10-13
+            .title
+                h2 Some example article
+            .tags
+                i.fa.fa-bolt
+            .date Posted on 13 Oct 2014
         //img(src='http://lorempixel.com/640/300/abstract')
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec magna velit, volutpat a ullamcorper non, mattis ut libero. Maecenas id dolor leo. Nulla at arcu sed ipsum volutpat pharetra in in velit. Vestibulum a volutpat ante. Curabitur posuere felis et diam dictum congue. Maecenas aliquam, lacus fringilla scelerisque mollis, purus odio ultricies tortor, sit amet dignissim mi tellus eleifend urna. Sed vehicula tempor nisi sed vulputate.
         //.divider
@@ -20,18 +22,22 @@ block content
     .card
         img(src='http://lorempixel.com/640/300/abstract')
         .top
-            h2 Another example article
-            .date
-                p 2014-10-08
+            .title
+                h2 Another example article
+            .tags
+                i.fa.fa-line-chart
+            .date Posted on 8 Oct 2014
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec magna velit, volutpat a ullamcorper non, mattis ut libero. Maecenas id dolor leo. Nulla at arcu sed ipsum volutpat pharetra in in velit. Vestibulum a volutpat ante. Curabitur posuere felis et diam dictum congue. Maecenas aliquam, lacus fringilla scelerisque mollis, purus odio ultricies tortor, sit amet dignissim mi tellus eleifend urna. Sed vehicula tempor nisi sed vulputate.
         .bottom
             .btn READ MORE
 
     .card
         .top
-            h2 Breaking news!
-            .date
-                p 2014-10-02
+            .title
+                h2 Breaking news!
+            .tags
+                i.fa.fa-newspaper-o
+            .date Posted on 2 Oct 2014
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec magna velit, volutpat a ullamcorper non, mattis ut libero. Maecenas id dolor leo. Nulla at arcu sed ipsum volutpat pharetra in in velit. Vestibulum a volutpat ante. Curabitur posuere felis et diam dictum congue. Maecenas aliquam, lacus fringilla scelerisque mollis, purus odio ultricies tortor, sit amet dignissim mi tellus eleifend urna. Sed vehicula tempor nisi sed vulputate.
         //.divider
         .bottom
@@ -40,9 +46,12 @@ block content
     .card
         img(src='http://lorempixel.com/640/299/abstract')
         .top
-            h2 Just a casual story
-            .date
-                p 2014-09-25
+            .title
+                h2 Just a casual story
+            .tags
+                i.fa.fa-pie-chart
+                i.fa.fa-anchor
+            .date Posted on 29 Sep 2014
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec magna velit, volutpat a ullamcorper non, mattis ut libero. Maecenas id dolor leo. Nulla at arcu sed ipsum volutpat pharetra in in velit. Vestibulum a volutpat ante. Curabitur posuere felis et diam dictum congue. Maecenas aliquam, lacus fringilla scelerisque mollis, purus odio ultricies tortor, sit amet dignissim mi tellus eleifend urna. Sed vehicula tempor nisi sed vulputate.
         .bottom
             .btn READ MORE
@@ -50,9 +59,9 @@ block content
     .card
         img(src='http://lorempixel.com/640/301/abstract')
         .top
-            h2 Nothing really important
-            .date
-                p 2014-09-20
+            .title
+                h2 Nothing really important
+            .date Posted on 23 Sep 2014
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec magna velit, volutpat a ullamcorper non, mattis ut libero. Maecenas id dolor leo. Nulla at arcu sed ipsum volutpat pharetra in in velit. Vestibulum a volutpat ante. Curabitur posuere felis et diam dictum congue. Maecenas aliquam, lacus fringilla scelerisque mollis, purus odio ultricies tortor, sit amet dignissim mi tellus eleifend urna. Sed vehicula tempor nisi sed vulputate.
         .bottom
             .btn READ MORE
