--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -8,6 +8,7 @@ html(lang='en')
         block css
             link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css')
             link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.min.css')
+            link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css')
 
             //-<!-- build:css public/css/styles.min.css -->
             link(rel='stylesheet', href='/css/app.css')
