--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -36,34 +36,31 @@ body {
   padding-left: 20px;
   padding-right: 20px;
 
-  h2 {
-//    color: #3f51b5;
-//    color: darken($color-main, 0.2);
-    color: #000;
-    font-weight: 500;
-  }
-
   .top {
     width: 100%;
     margin-bottom: 16px;
     position: relative;
 
-    .date {
-      float: right;
+    .title {
+      h2 {
+        color: #000;
+        font-weight: 500;
+      }
+    }
+
+    .tags {
       position: absolute;
-      top: 8px;
+      top: 0;
       right: 0;
+      color: #888;
+      font-size: 1.6em;
+    }
+
+    .date {
+      font-size: 0.8em;
+      color: #888;
     }
   }
-
-//  .img {
-//    img {
-//      margin-left: -20px;
-//      margin-right: -20px;
-////      margin-top: -10px;
-//      width: 107%;
-//    }
-//  }
 
   img {
     margin-left: -20px;
@@ -74,9 +71,11 @@ body {
   }
 
   .bottom {
-    margin-top: 20px;
+    margin-top: 25px;
     text-align: center;
     border-top: 1px solid rgba(85, 85, 85, 0.3);
+    color: #888;
+    padding-top: 5px;
   }
 
 }
