--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -5,6 +5,12 @@ body {
   background-color: #f3f3f3;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
 .top-bg-bar {
   position: absolute;
   top: 0;
@@ -27,14 +33,19 @@ body {
   display: block;
   box-sizing: border-box;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-  padding: 8px;
   border-radius: 2px;
   border-style: 1px solid rgba(0,0,0,.26);
   overflow: hidden;
   background-color: #fff;
   margin-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  //  padding-left: 20px;
+  //  padding-right: 20px;
+  padding: 0;
+
+  &>* {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 
   .top {
     width: 100%;
@@ -68,11 +79,9 @@ body {
   }
 
   img {
-    margin-left: -20px;
-    margin-right: -20px;
-    margin-top: -10px;
-//    width: 751px;
-    width: 107%;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
   }
 
   .bottom {
@@ -82,11 +91,40 @@ body {
     color: #888;
     padding-top: 5px;
   }
-
 }
 
-.card.header {
-  height: 240px;
+.card.post {
+  .top {
+    margin: 0 0 30px 0;
+    position: relative;
+
+    img {
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+    }
+
+    .bar {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 12px 0 12px 20px;
+
+      .title h2 {
+        color: #fff;
+        margin: 0;
+        padding: 0;
+        margin-bottom: 5px;
+      }
+
+      .date {
+        color: #ccc;
+      }
+    }
+
+  }
 }
 
 .divider {
