No more posts info added

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -20,6 +20,14 @@ block content
             .bottom
                 a.btn(href='post/' + post.permalink) READ MORE
 
+    .info
+        p Wow, you've reached this far, congratulations!
+        p But still, bad news. There are no posts left.
+        p &nbsp;
+        p Maybe you would like to contact me and suggest an article?
+        .btn
+            i.fa.fa-envelope.fa-5x
+
     //
     //.card
     //    .top
