--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -18,20 +18,45 @@ html(lang='en')
             //-<!-- build:js public/js/scripts.min.js -->
             //-<!-- endbuild -->
             script(src='http://localhost:35729/livereload.js')
+            //script(src="components/platform/platform.js")
+
+        //block elements
+        //    link(rel="import", href="components/paper-button/paper-button.html")
+        //    link(rel="import", href="path/to/core-icons/core-icons.html")
     body
-        //include navigation
         .top-bg-bar
+
+        .navbar.top-bar
+            .container
+                .row
+                    .col-md-8.col-md-offset-2.col-xs-10.col-xs-offset-1
+                        .logo.pull-left
+                            strong OD&nbsp;
+                            | odylewski.com
+                        .tools.pull-right
+                            a(href='contact')
+                                i.fa.fa-envelope
+
 
         .container
             .row
                 .content.col-md-8.col-md-offset-2.col-xs-10.col-xs-offset-1
                     block content
 
-        script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
-        script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js')
+        .bottom-bg-bar
+            span Made with&nbsp;
+            i.fa.fa-heart
+            span &nbsp;by Oskar Dylewski 2014
+
+        //.go-up#go-up-btn
+
         //-<!-- build:js public/js/scripts.min.js -->
         //bower:
         script(src='../../public/components/jquery/dist/jquery.js')
         script(src='../../public/components/bootstrap/dist/js/bootstrap.js')
+        script(src='../../public/components/lodash/dist/lodash.compat.js')
         //endbower
+        script(src='/js/average-color.js')
+        script(src='/js/app.js')
+
         //-<!-- endbuild -->
