--- a/app/views/post.jade
+++ b/app/views/post.jade
@@ -3,7 +3,7 @@ extends layout
 block content
     .card.post
         .top
-            img(src=post.image)
+            img#header-image(src=post.image)
             .bar
                 .title
                     h2= post.title
