--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -1,14 +1,14 @@
-$color-main: #009688;
+$color-main: #e51c23;
 
 body {
   background-color: #f3f3f3;
+  position: relative;
 }
 
 * {
   margin: 0;
   padding: 0;
 }
-
 
 .top-bg-bar {
   position: absolute;
@@ -20,12 +20,51 @@ body {
   z-index: -1000;
 }
 
-.content {
-  margin-top: 120px;
+.top-bar {
+  position: fixed;
+  width: 100%;
+  background-color: $color-main;
+  z-index: 10000;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+  height: 40px;
+  min-height: 40px;
+
+  a, a:visited {
+    font-size: 20px;
+    line-height: 38px;
+    height: 39px;
+    color: #fff;
+    display: block;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    &:hover {
+      background-color: darken($color-main, 5);
+    }
+  }
+}
+
+.bottom-bg-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  background-color: $color-main;
+  z-index: -1000;
+  text-align: center;
+  padding: 25px;
+  color: #fff;
+}
+
+.go-up {
+  position: absolute;
+  bottom: 60px;
+
 }
 
 .content {
-  min-height: 200px;
+  margin-top: 100px;
 }
 
 .card {
@@ -143,4 +182,15 @@ body {
   height: 1px;
   width: 100%;
   opacity: 0.3;
+  margin: 0;
+}
+
+paper-button.hover:hover {
+  background: #eee;
+}
+
+.logo {
+  font-size: 2em;
+  font-weight: 800;
+  color: #fff;
 }
