--- a/public/css/fonts.scss
+++ b/public/css/fonts.scss
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:900,400italic,400,300,700,500);
+@import url(http://fonts.googleapis.com/css?family=Marvel:400,700);
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -6,4 +7,8 @@ body {
 
 p {
   font-size: 1.1em;
+}
+
+.logo {
+  font-family: 'Marvel', sans-serif;
 }
