--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -1,8 +1,9 @@
-$color-main: #e51c23;
+@import 'config.scss';
 
 body {
-  background-color: #f3f3f3;
+  background-color: $color-bg;
   position: relative;
+  opacity: 0;
 }
 
 * {
@@ -26,21 +27,31 @@ body {
   background-color: $color-main;
   z-index: 10000;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-  height: 40px;
-  min-height: 40px;
+//  height: 40px;
+  min-height: 50px;
+  padding: 5px 0;
+  border-radius: 0;
 
-  a, a:visited {
-    font-size: 20px;
-    line-height: 38px;
-    height: 39px;
-    color: #fff;
-    display: block;
-    padding-left: 10px;
-    padding-right: 10px;
+  .tools {
+    a, a:visited {
+      font-size: 20px;
+      line-height: 38px;
+      height: 39px;
+      color: #fff;
+      display: block;
+      padding-left: 10px;
+      padding-right: 10px;
+      border-radius: 5px;
 
-    &:hover {
-      background-color: darken($color-main, 5);
+      &:hover {
+        background-color: darken($color-main, 5);
+      }
     }
+  }
+
+  a.logo, a.logo:hover, a.logo:visited {
+    text-decoration: none;
+    color: #fff;
   }
 }
 
@@ -75,7 +86,7 @@ body {
   border-style: 1px solid rgba(0,0,0,.26);
   overflow: hidden;
   background-color: #fff;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   padding: 0;
 
   &>* {
@@ -131,40 +142,6 @@ body {
     a {
       color: #888;
     }
-  }
-}
-
-.card.post {
-  .top {
-    margin: 0 0 30px 0;
-    position: relative;
-
-    img {
-      width: 100%;
-      margin-left: 0;
-      margin-right: 0;
-    }
-
-    .bar {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 12px 0 12px 20px;
-
-      .title h2 {
-        color: #fff;
-        margin: 0;
-        padding: 0;
-        margin-bottom: 5px;
-      }
-
-      .date {
-        color: #ccc;
-      }
-    }
-
   }
 }
 
