--- a/public/css/post.scss
+++ b/public/css/post.scss
@@ -45,4 +45,37 @@
     font-size: 1.7em;
     font-weight: 300;
   }
+
+  a {
+    color: $color-main;
+    text-decoration: none;
+    position: relative;
+    z-index: 2;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: -2px;
+      z-index: -1;
+      box-sizing: content-box;
+      padding: 0 2px;
+      width: 100%;
+      height: 100%;
+      background-color: $color-main;
+      content: '';
+      opacity: 0;
+      transition: transform 0.2s, opacity 0.2s;
+      transition-timing-function: cubic-bezier(0.25,0.25,0.325,1.39);
+      transform: scale(0);
+    }
+
+    &:hover {
+      color: #fff;
+
+      &::before {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+  }
 }
