--- a/app/views/post.jade
+++ b/app/views/post.jade
@@ -11,3 +11,7 @@ block content
         p
             strong= post.description
         | !{post.body}
+
+block bottom
+    .card
+        p You may also like
