--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -31,7 +31,7 @@ html(lang='en')
         .navbar.navbar-fixed-top.top-bar
             .container
                 .row
-                    .col-md-8.col-md-offset-2.col-xs-10.col-xs-offset-1
+                    .col-md-10.col-md-offset-1.col-xs-12.col-lg-8.col-lg-offset-2
                         a.logo.pull-left(href='/')
                             strong OD&nbsp;
                             | odylewski.com
@@ -41,14 +41,14 @@ html(lang='en')
 
 
         .container
-            //.row
-            //    .header-logo.col-md-8.col-md-offset-2.col-xs-10.col-xs-offset-1
-            //        a.logo.pull-left(href='/')
-            //            strong OD&nbsp;
-            //            | odylewski.com
             .row
-                .content.col-md-8.col-md-offset-2.col-xs-10.col-xs-offset-1
+                .col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1.col-xs-12
                     block content
+
+        .container
+            .row
+                .col-lg-8.col-lg-offset-2.col-md-10.col-md-offset-1.col-xs-12
+                    block bottom
 
         .bottom-bg-bar
             span Made with&nbsp;
