--- a/public/css/post.scss
+++ b/public/css/post.scss
@@ -16,7 +16,7 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(0, 0, 0, 0.7);
       padding: 12px 0 12px 20px;
 
       .title h2 {
@@ -62,6 +62,7 @@
       width: 100%;
       height: 100%;
       background-color: $color-main;
+      border-radius: 2px;
       content: '';
       opacity: 0;
       transition: transform 0.2s, opacity 0.2s;
