Similar posts section added

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -69,8 +69,8 @@ html(lang='en')
         script(src='../../public/components/jasmine-jquery/lib/jasmine-jquery.js')
         script(src='../../public/components/scroll-up-bar/dist/scroll-up-bar.min.js')
         script(src='../../public/components/jquery.scrollmagic/index.js')
+        script(src='../../public/components/moment/moment.js')
         //endbower
-        script(src='/js/average-color.js')
         script(src='/js/app.js')
 
         //-<!-- endbuild -->
